# StepSnap

./: index.html
src/: main.tsx
src-tauri/: Cargo.toml
src-tauri/src/: accessibility.rs
src/components/: ImageEditor.tsx
src/components/generation/: StreamingMarkdownViewer.tsx
src/components/notifications/: NotificationCard.tsx  NotificationTray.tsx
src/pages/: RecordingDetail.tsx
src/pages/recording-detail/: StepsTab.tsx
src/store/: startupStore.ts
