[package]
name = "stepsnap"
version = "1.0.0"
description = "A desktop app for creating step-by-step documentation with AI assistance"
authors = ["StepSnap Contributors"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "stepsnap_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rdev = "0.5"
xcap = "0.8"
chrono = "0.4"
base64 = "0.21"
image = "0.25"
imageproc = "0.25"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1.8", features = ["v4"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# OCR dependencies
pure-onnx-ocr = "0.1"

# Platform-specific accessibility APIs
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_UI_Accessibility", "Win32_Foundation", "Win32_System_Com", "Win32_System_Variant", "Win32_System_Ole", "Win32_UI_HiDpi", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
core-graphics = "0.23"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSThread", "NSGeometry", "NSArray", "NSString"] }
objc2-core-foundation = "0.3"
objc2-app-kit = { version = "0.3", features = [
    "NSWindow",
    "NSColor",
    "NSView",
    "NSGraphicsContext",
    "NSBezierPath",
    "NSResponder",
    "NSApplication",
    "NSRunningApplication",
    "NSScreen",
    # Toast text rendering
    "NSTextField",
    "NSFont",
    "NSControl",
    "NSCell",
    "NSTextFieldCell",
    "NSImageView",
    "NSImage"
] }
objc2-quartz-core = { version = "0.3", features = ["CALayer"] }

[target.'cfg(target_os = "linux")'.dependencies]
# atspi 0.29 is the first release where `AccessibilityConnection` exposes
# `root_accessible_on_registry` and `object_as_accessible` (added together with
# the P2P work), which the focused-field walker in `accessibility.rs` relies on.
# Default features pull in `connection`, `proxies`, `p2p`, `wrappers`; we add
# `tokio` so the embedded current-thread runtime in `get_focused_field_value`
# can drive zbus. zbus itself is pulled in transitively by atspi (no direct use
# in our code) so we don't list it separately.
atspi = { version = "0.29", features = ["tokio"] }
x11 = { version = "2.21", features = ["xlib"] }

# Wayland support
wayland-client = "0.31"
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
smithay-client-toolkit = { version = "0.19", features = ["calloop"] }
notify-rust = "4"
